--- a/templates/thongbao_list.html
+++ b/templates/thongbao_list.html
@@ -11,10 +11,10 @@
     <ul style="list-style:none; padding:0; margin:0;">
       {% for n in notifications %}
       <li style="padding:12px 0; border-bottom:1px solid #eee; display:flex; justify-content:space-between; align-items:center;">
-        <a href="{{ url_for('thong_bao_chung_detail', id=n.id) }}" style="color:#b71c1c; text-decoration:none; font-weight:600;">
+        <a href="{{ url_for('thong_bao_chung_detail', id=n.id) }}" style="color:#c15151; text-decoration:none; font-weight:600;">
           {{ n.title }}
         </a>
-        <span style="color:#888; font-size:0.9rem;">{{ n.date }}</span>
+        <span style="color:#383838; font-size:0.9rem;">{{ n.date }}</span>
       </li>
       {% endfor %}
     </ul>
